--- a/css/cltversion.css
+++ b/css/cltversion.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-    background-color: #333;
+    background-color: #dfcece;
     color: #fff;
     text-align: center;
     padding: 1rem;
